--- a/index.html
+++ b/index.html
@@ -7,23 +7,26 @@
 
     <!-- my css files -->
     <link rel="stylesheet" href="/css/heading.css" />
-    <link rel="stylesheet" href="/css/main.css" />
 
     <!-- bootstrap cdn file -->
     <link
+      rel="stylesheet"
+      href="/node_modules/bootstrap//dist/css/bootstrap.min.css"
+    />
+    <!-- <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
       integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
       crossorigin="anonymous"
-    />
+    /> -->
   </head>
   <body>
     <header>
       <nav class="navbar navbar-bg fixed-top">
-        <div class="container-fluid">
-          <a class="text-primary" href="#">Offcanvas dark navbar</a>
+        <div class="container">
+          <a class="navbar-heading" href="#">Mint Design</a>
           <button
-            class="navbar-toggler"
+            class="navbar-toggler d-lg-none"
             type="button"
             data-bs-toggle="offcanvas"
             data-bs-target="#offcanvasDarkNavbar"
@@ -32,6 +35,8 @@
           >
             <span class="navbar-toggler-icon"></span>
           </button>
+
+          <!-- responsive items here  -->
           <div
             class="offcanvas offcanvas-end text-bg-dark"
             tabindex="-1"
@@ -94,6 +99,36 @@
               </form>
             </div>
           </div>
+
+          <!-- navbar others items here -->
+          <div class="d-none d-lg-flex flex-row">
+            <ul class="navbar-nav ms-auto flex flex-row gap-5 mt-1">
+              <li class="nav-item">
+                <a class="navbar-item" aria-current="page" href="#"
+                  >What we do</a
+                >
+              </li>
+              <li class="nav-item">
+                <a class="navbar-item" aria-current="page" href="#">About us</a>
+              </li>
+              <li class="nav-item">
+                <a class="navbar-item" aria-current="page" href="#">Our Work</a>
+              </li>
+              <li class="nav-item">
+                <a class="navbar-item" aria-current="page" href="#"
+                  >Inside minds</a
+                >
+              </li>
+              <li class="nav-item">
+                <a class="navbar-item" aria-current="page" href="#">Blog</a>
+              </li>
+              <li class="nav-item">
+                <a class="navbar-item" aria-current="page" href="#"
+                  >Contact us</a
+                >
+              </li>
+            </ul>
+          </div>
         </div>
       </nav>
     </header>
@@ -101,10 +136,11 @@
     <footer></footer>
 
     <!-- bootstrap cdn file -->
-    <script
+    <script src="/node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+    <!-- <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
       crossorigin="anonymous"
-    ></script>
+    ></script> -->
   </body>
 </html>
