--- a/index.html
+++ b/index.html
@@ -13,6 +13,14 @@
       rel="stylesheet"
       href="/node_modules/bootstrap//dist/css/bootstrap.min.css"
     />
+
+    <!-- font awesome -->
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
+      integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A=="
+      crossorigin="anonymous"
+    />
     <!-- <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -38,71 +46,57 @@
 
           <!-- responsive items here  -->
           <div
-            class="offcanvas offcanvas-end text-bg-dark"
+            class="offcanvas offcanvas-end"
             tabindex="-1"
             id="offcanvasDarkNavbar"
             aria-labelledby="offcanvasDarkNavbarLabel"
           >
-            <div class="offcanvas-header">
-              <h5 class="offcanvas-title" id="offcanvasDarkNavbarLabel">
-                Dark offcanvas
-              </h5>
+            <div class="offcanvas-header responsive-navbar">
               <button
                 type="button"
                 class="btn-close btn-close-white"
                 data-bs-dismiss="offcanvas"
-                aria-label="Close"
               ></button>
             </div>
-            <div class="offcanvas-body">
-              <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
+            <div class="offcanvas-body responsive-navbar">
+              <ul class="navbar-nav justify-content-end flex-grow-1 pe-3 gap-5">
                 <li class="nav-item">
-                  <a class="nav-link active" aria-current="page" href="#"
-                    >Home</a
+                  <a class="navbar-res-item" aria-current="page" href="#"
+                    >What we do</a
                   >
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="#">Link</a>
-                </li>
-                <li class="nav-item dropdown">
-                  <a
-                    class="nav-link dropdown-toggle"
-                    href="#"
-                    role="button"
-                    data-bs-toggle="dropdown"
-                    aria-expanded="false"
+                  <a class="navbar-res-item" aria-current="page" href="#"
+                    >About us</a
                   >
-                    Dropdown
-                  </a>
-                  <ul class="dropdown-menu dropdown-menu-dark">
-                    <li><a class="dropdown-item" href="#">Action</a></li>
-                    <li>
-                      <a class="dropdown-item" href="#">Another action</a>
-                    </li>
-                    <li>
-                      <hr class="dropdown-divider" />
-                    </li>
-                    <li>
-                      <a class="dropdown-item" href="#">Something else here</a>
-                    </li>
-                  </ul>
+                </li>
+                <li class="nav-item">
+                  <a class="navbar-res-item" aria-current="page" href="#"
+                    >Our Work</a
+                  >
+                </li>
+                <li class="nav-item">
+                  <a class="navbar-res-item" aria-current="page" href="#"
+                    >Inside minds</a
+                  >
+                </li>
+                <li class="nav-item">
+                  <a class="navbar-res-item" aria-current="page" href="#"
+                    >Blog</a
+                  >
+                </li>
+                <li class="nav-item">
+                  <a class="navbar-res-item" aria-current="page" href="#"
+                    >Contact us</a
+                  >
                 </li>
               </ul>
-              <form class="d-flex mt-3" role="search">
-                <input
-                  class="form-control me-2"
-                  type="search"
-                  placeholder="Search"
-                  aria-label="Search"
-                />
-                <button class="btn btn-success" type="submit">Search</button>
-              </form>
             </div>
           </div>
 
           <!-- navbar others items here -->
           <div class="d-none d-lg-flex flex-row">
-            <ul class="navbar-nav ms-auto flex flex-row gap-5 mt-1">
+            <ul class="navbar-nav ms-auto flex flex-row gap-3 mt-1">
               <li class="nav-item">
                 <a class="navbar-item" aria-current="page" href="#"
                   >What we do</a
