banner section done

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 
     <!-- my css files -->
     <link rel="stylesheet" href="/css/heading.css" />
+    <link rel="stylesheet" href="/css/banner.css" />
 
     <!-- bootstrap cdn file -->
     <link
@@ -125,6 +126,21 @@
           </div>
         </div>
       </nav>
+
+      <section class="banner-section">
+        <h1>renowned marketing talent</h1>
+        <h2>backing your business growth</h2>
+        <div>
+          <button>
+            <span>Our work</span>
+            <i class="fa-solid fa-arrow-right"></i>
+          </button>
+          <button>
+            <span>Contact us</span>
+            <i class="fa-solid fa-arrow-right"></i>
+          </button>
+        </div>
+      </section>
     </header>
     <main></main>
     <footer></footer>
