third section running

--- a/index.html
+++ b/index.html
@@ -6,8 +6,10 @@
     <title>Mint Design</title>
 
     <!-- my css files -->
+    <link rel="stylesheet" href="/css/style.css" />
     <link rel="stylesheet" href="/css/heading.css" />
     <link rel="stylesheet" href="/css/banner.css" />
+    <link rel="stylesheet" href="/css/ask.css" />
 
     <!-- bootstrap cdn file -->
     <link
@@ -142,10 +144,42 @@
         </div>
       </section>
     </header>
-    <main></main>
+
+    <!-- body section -->
+    <main>
+      <section class="ask-section container">
+        <div class="ask-section-content">
+          <h3>
+            ask your marketer to do more, <br />
+            in your opinion.
+          </h3>
+          <p>
+            We help you achieve marketing objectives that are important to you,
+            whether it's <br />
+            boosting revenue, enhancing brand loyalty, boosting website traffic,
+            or removing a <br />
+            rival from the podium.
+          </p>
+          <button>
+            <span>See Our work</span>
+            <i class="fa-solid fa-arrow-right"></i>
+          </button>
+        </div>
+
+        <!-- icon svg -->
+        <div class="ask-section-animation">
+          <div></div>
+          <div></div>
+          <div></div>
+          <div></div>
+          <div>expert more from your marketer</div>
+        </div>
+      </section>
+    </main>
     <footer></footer>
 
     <!-- bootstrap cdn file -->
+    <script src="/js/main.js"></script>
     <script src="/node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <!-- <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
