hover animation running

--- a/index.html
+++ b/index.html
@@ -160,10 +160,15 @@
             or removing a <br />
             rival from the podium.
           </p>
-          <button>
-            <span>See Our work</span>
-            <i class="fa-solid fa-arrow-right"></i>
-          </button>
+
+          <div class="ask-section-content-btn">
+            <div class="ask-section-playground">
+              <button>
+                <span>See Our work</span>
+                <i class="fa-solid fa-arrow-right"></i>
+              </button>
+            </div>
+          </div>
         </div>
 
         <!-- icon svg -->
