website icon desing complete

--- a/index.html
+++ b/index.html
@@ -175,9 +175,11 @@
         <div class="ask-section-animation">
           <div></div>
           <div></div>
-          <div></div>
-          <div></div>
-          <div>expert more from your marketer</div>
+          <div>
+            <div></div>
+            <div></div>
+          </div>
+          <!-- <div>expert more from your marketer</div> -->
         </div>
       </section>
     </main>
