bubble section running

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="/css/heading.css" />
     <link rel="stylesheet" href="/css/banner.css" />
     <link rel="stylesheet" href="/css/ask.css" />
+    <link rel="stylesheet" href="/css/four.css" />
 
     <!-- bootstrap cdn file -->
     <link
@@ -178,6 +179,38 @@
           <div>
             <div></div>
             <div></div>
+          </div>
+        </div>
+      </section>
+
+      <!-- four section -->
+      <section class="bubble"></section>
+      <section class="bubble-content">
+        <div class="container">
+          <div class="bubble-details">
+            <h1>
+              We provide simplicity through consistent, <br />
+              world-class service in a world of <br />
+              marketing complexity.
+            </h1>
+          </div>
+
+          <div class="bubble-icons">
+            <div class="bubble-icon">
+              <i class="fa-solid fa-earth-americas"></i>
+              <h5>ranked in the top 4% on the planet.</h5>
+              <p>for the satisfaction of our customers</p>
+            </div>
+            <div class="bubble-icon">
+              <i class="fa-solid fa-trophy"></i>
+              <h5>13 distinctions and honors</h5>
+              <p>both regionally and globally</p>
+            </div>
+            <div class="bubble-icon">
+              <i class="fa-solid fa-clock"></i>
+              <h5>Deloitte Fast 500</h5>
+              <p>listed 4 years</p>
+            </div>
           </div>
         </div>
       </section>
