slider complete but some issue

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="/css/banner.css" />
     <link rel="stylesheet" href="/css/ask.css" />
     <link rel="stylesheet" href="/css/four.css" />
+    <link rel="stylesheet" href="/css/casousel.css" />
 
     <!-- bootstrap cdn file -->
     <link
@@ -212,6 +213,116 @@
               <p>listed 4 years</p>
             </div>
           </div>
+        </div>
+      </section>
+
+      <section class="carousel-section">
+        <div class="container">
+          <div class="carousel-heading">
+            <h1>We have both domestic and international clients.</h1>
+          </div>
+
+          <!-- carousel here -->
+
+          <div id="carouselExample" class="carousel slide">
+            <div class="carousel-inner">
+              <div class="carousel-item active">
+                <div class="slider-section">
+                  <!-- per img section -->
+                  <div class="image-container">
+                    <img src="/assets/Img/images (1).jpeg" alt="" />
+                    <div class="overlay">
+                      <h1>TOP 10</h1>
+                    </div>
+                  </div>
+                  <div class="image-container">
+                    <img src="/assets/Img/images (11).jpeg" alt="" />
+                    <div class="overlay">
+                      <h1>Mitre 10 mega</h1>
+                    </div>
+                  </div>
+                  <div class="image-container">
+                    <img src="/assets/Img/images (9).jpeg" alt="" />
+                    <div class="overlay">
+                      <h1>Lone Star</h1>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="carousel-item">
+                <div class="slider-section">
+                  <!-- per img section -->
+                  <div class="image-container">
+                    <img src="/assets/Img/images (1).jpeg" alt="" />
+                    <div class="overlay">
+                      <h1>TOP 10</h1>
+                    </div>
+                  </div>
+                  <div class="image-container">
+                    <img src="/assets/Img/images (11).jpeg" alt="" />
+                    <div class="overlay">
+                      <h1>Mitre 10 mega</h1>
+                    </div>
+                  </div>
+                  <div class="image-container">
+                    <img src="/assets/Img/images (9).jpeg" alt="" />
+                    <div class="overlay">
+                      <h1>Lone Star</h1>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="carousel-item">
+                <div class="slider-section">
+                  <!-- per img section -->
+                  <div class="image-container">
+                    <img src="/assets/Img/images (1).jpeg" alt="" />
+                    <div class="overlay">
+                      <h1>TOP 10</h1>
+                    </div>
+                  </div>
+                  <div class="image-container">
+                    <img src="/assets/Img/images (11).jpeg" alt="" />
+                    <div class="overlay">
+                      <h1>Mitre 10 mega</h1>
+                    </div>
+                  </div>
+                  <div class="image-container">
+                    <img src="/assets/Img/images (9).jpeg" alt="" />
+                    <div class="overlay">
+                      <h1>Lone Star</h1>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <button
+              class="carousel-control-prev"
+              type="button"
+              data-bs-target="#carouselExample"
+              data-bs-slide="prev"
+            >
+              <span
+                class="carousel-control-prev-icon"
+                aria-hidden="true"
+              ></span>
+              <span class="visually-hidden">Previous</span>
+            </button>
+            <button
+              class="carousel-control-next"
+              type="button"
+              data-bs-target="#carouselExample"
+              data-bs-slide="next"
+            >
+              <span
+                class="carousel-control-next-icon"
+                aria-hidden="true"
+              ></span>
+              <span class="visually-hidden">Next</span>
+            </button>
+          </div>
+
+          <!-- carousel end here -->
         </div>
       </section>
     </main>
