--- a/index.html
+++ b/index.html
@@ -302,10 +302,9 @@
               data-bs-target="#carouselExample"
               data-bs-slide="prev"
             >
-              <span
-                class="carousel-control-prev-icon"
-                aria-hidden="true"
-              ></span>
+              <i
+                class="fa-solid fa-chevron-left carousel-control-prev-icon-custom"
+              ></i>
               <span class="visually-hidden">Previous</span>
             </button>
             <button
@@ -314,15 +313,25 @@
               data-bs-target="#carouselExample"
               data-bs-slide="next"
             >
-              <span
-                class="carousel-control-next-icon"
-                aria-hidden="true"
-              ></span>
+              <i
+                class="fa-solid fa-chevron-right carousel-control-next-icon-custom"
+              ></i>
               <span class="visually-hidden">Next</span>
             </button>
           </div>
-
           <!-- carousel end here -->
+
+          <div
+            class="ask-section-content-btn"
+            style="margin-left: 30rem; margin-top: 3rem"
+          >
+            <div class="ask-section-playground">
+              <button>
+                <span>See Our work</span>
+                <i class="fa-solid fa-arrow-right"></i>
+              </button>
+            </div>
+          </div>
         </div>
       </section>
     </main>
