second slider setup complete

--- a/index.html
+++ b/index.html
@@ -334,6 +334,82 @@
           </div>
         </div>
       </section>
+
+      <!-- ! carousel section second start here -->
+      <section class="carousel-section">
+        <div class="container">
+          <div class="carousel-heading">
+            <h1>We have both domestic and international clients.</h1>
+          </div>
+          <p
+            style="
+              text-align: center;
+              font-family: sans-serif;
+              padding: 20px 10px;
+            "
+          >
+            We collaborate most effectively with ambitious Kiwi businesses that
+            are long-term investments and have the capacity and drive for
+            expansion. If you have high expectations and are willing to invest
+            in our expertise, you'll love us.
+          </p>
+
+          <!-- carousel here -->
+
+          <div id="carouselExample2" class="carousel slide">
+            <div class="carousel-inner">
+              <div class="carousel-item active">
+                <!--  -->
+                <p>hello</p>
+              </div>
+              <div class="carousel-item">
+                <!--  -->
+                <p>hello</p>
+              </div>
+              <div class="carousel-item">
+                <!--  -->
+                <p>hello</p>
+              </div>
+            </div>
+            <button
+              class="carousel-control-prev"
+              type="button"
+              data-bs-target="#carouselExample2"
+              data-bs-slide="prev"
+            >
+              <i
+                class="fa-solid fa-chevron-left carousel-control-prev-icon-custom"
+              ></i>
+              <span class="visually-hidden">Previous</span>
+            </button>
+            <button
+              class="carousel-control-next"
+              type="button"
+              data-bs-target="#carouselExample2"
+              data-bs-slide="next"
+            >
+              <i
+                class="fa-solid fa-chevron-right carousel-control-next-icon-custom"
+              ></i>
+              <span class="visually-hidden">Next</span>
+            </button>
+          </div>
+          <!-- carousel end here -->
+
+          <div
+            class="ask-section-content-btn"
+            style="margin-left: 30rem; margin-top: 3rem"
+          >
+            <div class="ask-section-playground">
+              <button>
+                <span>See Our work</span>
+                <i class="fa-solid fa-arrow-right"></i>
+              </button>
+            </div>
+          </div>
+        </div>
+      </section>
+      <!-- ? carousel section second start here -->
     </main>
     <footer></footer>
 
