second slider complete

--- a/index.html
+++ b/index.html
@@ -359,16 +359,36 @@
           <div id="carouselExample2" class="carousel slide">
             <div class="carousel-inner">
               <div class="carousel-item active">
-                <!--  -->
-                <p>hello</p>
+                <div class="slider-section">
+                  <p>Jennian Homes</p>
+                  <p>Behemoth Brewing</p>
+                  <p>Southern Cross Healthcare</p>
+                  <p>Jukcy</p>
+                </div>
               </div>
               <div class="carousel-item">
-                <!--  -->
-                <p>hello</p>
+                <div class="slider-section">
+                  <p>Christchurch Casino</p>
+                  <p>Shine On</p>
+                  <p>Anytime Fitness</p>
+                  <p>Online Vet Store</p>
+                </div>
               </div>
               <div class="carousel-item">
-                <!--  -->
-                <p>hello</p>
+                <div class="slider-section">
+                  <p>TOP 10</p>
+                  <p>Coffee Culture</p>
+                  <p>Kiwibank</p>
+                  <p>Mitre10</p>
+                </div>
+              </div>
+              <div class="carousel-item">
+                <div class="slider-section">
+                  <p>Milestone Homes</p>
+                  <p>Accor</p>
+                  <p>Ryman</p>
+                  <p>Lone Star</p>
+                </div>
               </div>
             </div>
             <button
