bubble end section done

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="/css/ask.css" />
     <link rel="stylesheet" href="/css/four.css" />
     <link rel="stylesheet" href="/css/casousel.css" />
+    <link rel="stylesheet" href="/css/edge.css" />
 
     <!-- bootstrap cdn file -->
     <link
@@ -430,6 +431,37 @@
         </div>
       </section>
       <!-- ? carousel section second start here -->
+
+      <!-- ? edge section start -->
+      <section class="edge-section">
+        <div class="container">
+          <div class="edge-content">
+            <h3>
+              Get guaranteed marketing results from one of the most <br />
+              trusted digital marketing agencies in New Zealand*.
+            </h3>
+
+            <p>
+              Ranked in the top 2% of trusted companies in New Zealand based on
+              an independent review of our relationship <br />
+              with our audience.
+            </p>
+            <div class="ask-section-content-btn" style="margin-left: -13rem">
+              <div class="ask-section-playground">
+                <button>
+                  <span>See Our work</span>
+                  <i class="fa-solid fa-arrow-right"></i>
+                </button>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <!-- ! edge section start -->
+
+      <!-- ! bubble end section here -->
+      <section class="bubble-two"></section>
+      <!-- ? bubble end section here -->
     </main>
     <footer></footer>
 
