what we do section complete

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <link rel="stylesheet" href="/css/four.css" />
     <link rel="stylesheet" href="/css/casousel.css" />
     <link rel="stylesheet" href="/css/edge.css" />
+    <link rel="stylesheet" href="/css/what_we_do.css" />
 
     <!-- bootstrap cdn file -->
     <link
@@ -462,6 +463,32 @@
       <!-- ! bubble end section here -->
       <section class="bubble-two"></section>
       <!-- ? bubble end section here -->
+
+      <!-- ! what we section start -->
+      <section class="what_we_do-section">
+        <div class="container">
+          <div class="what_we_do-content">
+            <h6>What we do</h6>
+            <h1>Website design and development</h1>
+            <h1>Digital marketing and advertising</h1>
+            <h1>Marketing strategy and training</h1>
+            <h1>Videography and photography</h1>
+
+            <div
+              class="ask-section-content-btn"
+              style="margin-left: -13rem; margin-top: 2rem"
+            >
+              <div class="ask-section-playground">
+                <button>
+                  <span>See Our work</span>
+                  <i class="fa-solid fa-arrow-right"></i>
+                </button>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <!-- ? what we section end -->
     </main>
     <footer></footer>
 
