except little issue all the way of footer complete

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <link rel="stylesheet" href="/css/casousel.css" />
     <link rel="stylesheet" href="/css/edge.css" />
     <link rel="stylesheet" href="/css/what_we_do.css" />
+    <link rel="stylesheet" href="/css/minds.css" />
 
     <!-- bootstrap cdn file -->
     <link
@@ -489,6 +490,38 @@
         </div>
       </section>
       <!-- ? what we section end -->
+
+      <!-- ! minds section start -->
+      <section class="minds-section">
+        <div class="container">
+          <div class="minds-content">
+            <div class="minds-details">
+              <h2>Inside Minds</h2>
+              <p>
+                In quick, free video that delivers powerful insights from
+                industry peers
+              </p>
+              <button>
+                <span>see all videos</span>
+                <i class="fa-solid fa-arrow-right"></i>
+              </button>
+            </div>
+
+            <!-- img section -->
+            <div class="minds-image">
+              <img
+                src="/assets/Img/poster-inside-minds-carl-davidson__FillWzE2MDAsOTAwXQ.jpg"
+                alt=""
+              />
+
+              <div class="play-icon">
+                <i class="fa-solid fa-play"></i>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <!-- ? minds section end -->
     </main>
     <footer></footer>
 
