footer one section complete

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <link rel="stylesheet" href="/css/edge.css" />
     <link rel="stylesheet" href="/css/what_we_do.css" />
     <link rel="stylesheet" href="/css/minds.css" />
+    <link rel="stylesheet" href="/css/footer.css" />
 
     <!-- bootstrap cdn file -->
     <link
@@ -523,7 +524,27 @@
       </section>
       <!-- ? minds section end -->
     </main>
-    <footer></footer>
+
+    <!-- ! footer start here -->
+    <footer>
+      <div class="footer-wave"></div>
+      <section class="footer-one">
+        <div class="container">
+          <div class="footer-content">
+            <h2>
+              Discover the creative minds of our <br />
+              teams .
+            </h2>
+            <p>supporting your company's expansion</p>
+            <button>
+              <span>see all videos</span>
+              <i class="fa-solid fa-arrow-right"></i>
+            </button>
+          </div>
+        </div>
+      </section>
+    </footer>
+    <!-- ? footer end here -->
 
     <!-- bootstrap cdn file -->
     <script src="/js/main.js"></script>
