--- a/index.html
+++ b/index.html
@@ -543,6 +543,42 @@
           </div>
         </div>
       </section>
+      <section class="footer-two">
+        <div class="container">
+          <div class="footer-two-content">
+            <div class="content-one">
+              <h1>Mint design</h1>
+              <div class="footer-icons">
+                <i class="fa-brands fa-square-facebook"></i>
+                <i class="fa-brands fa-square-instagram"></i>
+                <i class="fa-brands fa-linkedin"></i>
+                <i class="fa-brands fa-youtube"></i>
+                <i class="fa-brands fa-square-vimeo"></i>
+              </div>
+            </div>
+            <div class="content-two">
+              <ul>
+                <li>What we do</li>
+                <li>Our work</li>
+                <li>our team</li>
+                <li>Why mint</li>
+                <li>Inside minds</li>
+                <li>Careers</li>
+              </ul>
+              <div class="content-two-contact">
+                <div class="contact-one">
+                  <p>03 967 9505</p>
+                  <i class="fa-solid fa-phone"></i>
+                </div>
+                <div class="contact-one">
+                  <p>hello@mintdesign.co.nz</p>
+                  <i class="fa-solid fa-paper-plane"></i>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
     </footer>
     <!-- ? footer end here -->
 
