footer done with responsive

--- a/index.html
+++ b/index.html
@@ -577,6 +577,12 @@
               </div>
             </div>
           </div>
+
+          <!-- ! copyright section -->
+          <section class="copyright">
+            <p>© 2024 Mint Design | Privacy Policy | Terms & Conditions</p>
+            <p>Website design and development by Mint Design</p>
+          </section>
         </div>
       </section>
     </footer>
