button issue replce with another button

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <link rel="stylesheet" href="/css/what_we_do.css" />
     <link rel="stylesheet" href="/css/minds.css" />
     <link rel="stylesheet" href="/css/footer.css" />
+    <link rel="stylesheet" href="/css/button.css" />
 
     <!-- bootstrap cdn file -->
     <link
@@ -167,14 +168,10 @@
             rival from the podium.
           </p>
 
-          <div class="ask-section-content-btn">
-            <div class="ask-section-playground">
-              <button>
-                <span>See Our work</span>
-                <i class="fa-solid fa-arrow-right"></i>
-              </button>
-            </div>
-          </div>
+          <button>
+            <span>See Our work</span>
+            <i class="fa-solid fa-arrow-right"></i>
+          </button>
         </div>
 
         <!-- icon svg -->
@@ -228,7 +225,11 @@
 
           <!-- carousel here -->
 
-          <div id="carouselExample" class="carousel slide">
+          <div
+            id="carouselExample"
+            class="carousel slide"
+            style="margin: 6rem 0rem"
+          >
             <div class="carousel-inner">
               <div class="carousel-item active">
                 <div class="slider-section">
@@ -325,17 +326,10 @@
           </div>
           <!-- carousel end here -->
 
-          <div
-            class="ask-section-content-btn"
-            style="margin-left: 30rem; margin-top: 3rem"
-          >
-            <div class="ask-section-playground">
-              <button>
-                <span>See Our work</span>
-                <i class="fa-solid fa-arrow-right"></i>
-              </button>
-            </div>
-          </div>
+          <button style="text-align: center; margin: auto">
+            <span>See Our work</span>
+            <i class="fa-solid fa-arrow-right"></i>
+          </button>
         </div>
       </section>
 
@@ -344,23 +338,26 @@
         <div class="container">
           <div class="carousel-heading">
             <h1>We have both domestic and international clients.</h1>
+            <p
+              style="
+                text-align: center;
+                font-family: sans-serif;
+                padding: 20px 10px;
+              "
+            >
+              We collaborate most effectively with ambitious Kiwi businesses
+              that are long-term investments and have the capacity and drive for
+              expansion. If you have high expectations and are willing to invest
+              in our expertise, you'll love us.
+            </p>
           </div>
-          <p
-            style="
-              text-align: center;
-              font-family: sans-serif;
-              padding: 20px 10px;
-            "
-          >
-            We collaborate most effectively with ambitious Kiwi businesses that
-            are long-term investments and have the capacity and drive for
-            expansion. If you have high expectations and are willing to invest
-            in our expertise, you'll love us.
-          </p>
 
           <!-- carousel here -->
-
-          <div id="carouselExample2" class="carousel slide">
+          <div
+            id="carouselExample2"
+            class="carousel slide"
+            style="margin: 6rem 0rem"
+          >
             <div class="carousel-inner">
               <div class="carousel-item active">
                 <div class="slider-section">
@@ -420,17 +417,10 @@
           </div>
           <!-- carousel end here -->
 
-          <div
-            class="ask-section-content-btn"
-            style="margin-left: 30rem; margin-top: 3rem"
-          >
-            <div class="ask-section-playground">
-              <button>
-                <span>See Our work</span>
-                <i class="fa-solid fa-arrow-right"></i>
-              </button>
-            </div>
-          </div>
+          <button style="text-align: center; margin: auto">
+            <span>See Our work</span>
+            <i class="fa-solid fa-arrow-right"></i>
+          </button>
         </div>
       </section>
       <!-- ? carousel section second start here -->
@@ -449,14 +439,11 @@
               an independent review of our relationship <br />
               with our audience.
             </p>
-            <div class="ask-section-content-btn" style="margin-left: -13rem">
-              <div class="ask-section-playground">
-                <button>
-                  <span>See Our work</span>
-                  <i class="fa-solid fa-arrow-right"></i>
-                </button>
-              </div>
-            </div>
+
+            <button>
+              <span>see all videos</span>
+              <i class="fa-solid fa-arrow-right"></i>
+            </button>
           </div>
         </div>
       </section>
@@ -476,17 +463,10 @@
             <h1>Marketing strategy and training</h1>
             <h1>Videography and photography</h1>
 
-            <div
-              class="ask-section-content-btn"
-              style="margin-left: -13rem; margin-top: 2rem"
-            >
-              <div class="ask-section-playground">
-                <button>
-                  <span>See Our work</span>
-                  <i class="fa-solid fa-arrow-right"></i>
-                </button>
-              </div>
-            </div>
+            <button>
+              <span>see all videos</span>
+              <i class="fa-solid fa-arrow-right"></i>
+            </button>
           </div>
         </div>
       </section>
