--- a/index.html
+++ b/index.html
@@ -186,7 +186,6 @@
       </section>
 
       <!-- four section -->
-      <section class="bubble"></section>
       <section class="bubble-content">
         <div class="container">
           <div class="bubble-details">
@@ -426,7 +425,13 @@
       <!-- ? carousel section second start here -->
 
       <!-- ? edge section start -->
-      <section class="edge-section">
+      <section
+        class="edge-section"
+        style="
+          border-bottom-right-radius: 100%;
+          border-bottom-left-radius: 100%;
+        "
+      >
         <div class="container">
           <div class="edge-content">
             <h3>
@@ -450,7 +455,7 @@
       <!-- ! edge section start -->
 
       <!-- ! bubble end section here -->
-      <section class="bubble-two"></section>
+      <!-- <section class="bubble-two"></section> -->
       <!-- ? bubble end section here -->
 
       <!-- ! what we section start -->
@@ -507,7 +512,6 @@
 
     <!-- ! footer start here -->
     <footer>
-      <div class="footer-wave"></div>
       <section class="footer-one">
         <div class="container">
           <div class="footer-content">
