--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
     <link rel="stylesheet" href="/css/button.css" />
 
     <!-- bootstrap cdn file -->
-    <link
+    <!-- <link
       rel="stylesheet"
       href="/node_modules/bootstrap//dist/css/bootstrap.min.css"
-    />
+    /> -->
 
     <!-- font awesome -->
     <link
@@ -31,12 +31,12 @@
       integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A=="
       crossorigin="anonymous"
     />
-    <!-- <link
+    <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
       integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
       crossorigin="anonymous"
-    /> -->
+    />
   </head>
   <body>
     <header>
@@ -574,11 +574,11 @@
 
     <!-- bootstrap cdn file -->
     <script src="/js/main.js"></script>
-    <script src="/node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
-    <!-- <script
+    <!-- <script src="/node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script> -->
+    <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
       crossorigin="anonymous"
-    ></script> -->
+    ></script>
   </body>
 </html>
